--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="image.png">
+
   </head>
   <body>
     <div class="container">
